Update routes/temples with Swagger annotations
